--- a/healnext/package.json
+++ b/healnext/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "axios": "^1.7.7",
     "next": "15.0.2",
     "prisma": "^5.21.1",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-hook-form": "^7.53.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
